snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
264a3b160aa0a2e8f08f51d6a978b60b